@@ -73,6 +73,7 @@ LogFile=/tmp/zabbix_agentd.log
 #	List of comma delimited IP addresses (or hostnames) of Zabbix servers.
 #	No spaces allowed. First entry is used for receiving list of and sending active checks.
 #	Note that hostnames must resolve hostname->IP address and IP address->hostname.
+#	If IPv6 support is enabled then '127.0.0.1', '::127.0.0.1', '::ffff:127.0.0.1' are treated equally.
 #
 # Mandatory: yes
 # Default:
